--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
-
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap");
 body {
   background: #ffda03;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   line-height: 150%;
   font-weight: 400;
 }
@@ -24,7 +24,6 @@ body {
   width: 100px;
 }
 
-// Общие стили для кнопок
 .button {
   border-radius: 16px;
   padding: 10px 20px;
@@ -32,33 +31,27 @@ body {
   cursor: pointer;
   font-size: 16px;
   transition: all 0.2s linear;
-
-  &--green {
-    background-color: #4CAF50;
-    color: white;
-
-    &:hover {
-      background-color: #45a049;
-    }
-  }
-
-  &--red {
-    background-color: #f44336; // Красный цвет для удаления
-    color: white;
-
-    &:hover {
-      background-color: #e53935; // Темно-красный при наведении
-    }
-  }
-
-  &--default {
-    background-color: #e0e0e0; // Цвет по умолчанию
-    color: black;
-
-    &:hover {
-      background-color: #d5d5d5; // Светло-серый при наведении
-    }
-  }
+}
+.button--green {
+  background-color: #4CAF50;
+  color: white;
+}
+.button--green:hover {
+  background-color: #45a049;
+}
+.button--red {
+  background-color: #f44336;
+  color: white;
+}
+.button--red:hover {
+  background-color: #e53935;
+}
+.button--default {
+  background-color: #e0e0e0;
+  color: black;
+}
+.button--default:hover {
+  background-color: #d5d5d5;
 }
 
 .search-area {
@@ -86,13 +79,12 @@ body {
   position: relative;
   width: 48px;
   height: 48px;
-
-  & span {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+}
+.search-item span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 #search-results {
@@ -111,11 +103,10 @@ body {
   border: none;
   cursor: pointer;
   font-size: 16px;
-  transition: all .2s linear;
-
-  &:hover {
-    background-color: #45a049;
-  }
+  transition: all 0.2s linear;
+}
+#add-ticket-btn:hover {
+  background-color: #45a049;
 }
 
 #tickets-container {
@@ -162,7 +153,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
   -moz-appearance: textfield;
 }
 
@@ -218,4 +208,17 @@ body {
 
 button {
   margin: 5px;
+}
+
+/*# sourceMappingURL=style.css.map */
+
+@media screen and (max-width: 767px) {
+  .header__container {
+    flex-direction: column;
+  }
+  #tickets-container {
+    transform: scale(0.8);
+    margin-top: -160px;
+  }
+
 }
