--- a/style.css
+++ b/style.css
@@ -210,7 +210,11 @@ button {
   margin: 5px;
 }
 
-/*# sourceMappingURL=style.css.map */
+@media screen and (max-width: 1000px) {
+  .modal-content {
+    width: 80vw;
+  }
+}
 
 @media screen and (max-width: 767px) {
   .header__container {
