--- a/style.css
+++ b/style.css
@@ -87,6 +87,25 @@ body {
   transform: translate(-50%, -50%);
 }
 
+.search-item:hover .remove-search-item {
+  display: block;
+}
+
+.remove-search-item {
+  display: none;
+  position: absolute;
+  top: -14px;
+  right: -14px;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  padding: 4px;
+  border-radius: 50%;
+  background: #fff;
+  font-size: 12px;
+  line-height: 18px;
+}
+
 #search-results {
   display: flex;
   align-items: center;
